test_suite/tests/ui/expected-string/character.stderr
error: expected serde rename attribute to be a string or integer: `rename = ...`
 --> tests/ui/expected-string/character.rs:5:22
  |
5 |     #[serde(rename = 'a')]
  |                      ^^^
